--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/agenda/agenda.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/agenda/agenda.component.css
@@ -24,3 +24,34 @@
     margin-top:0.2rem;
     font-size: 0.7rem;
 }
+table td{
+    padding:0;
+    width:14.28%;
+    height:7.5rem;
+}   
+
+@media(max-width:600px){
+    .container{
+        padding-right:0;
+    }
+    .auj{
+        display:inline-block;
+        margin-top:0.2rem;
+        font-size: 0.5rem;
+    }
+    .cal-titre{
+        padding-left:5rem;
+        text-align: center;
+        font-size:0.6rem;
+    }
+    .titre{
+        display:inline-block;
+        padding-left:0.5rem;
+        padding-right: 0.5rem;
+        width:3.5rem;
+    }
+    table td{
+        padding:0;
+        width:14.28%;
+    }
+}
