--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.html
@@ -3,7 +3,7 @@
     <span class="jourC w-100">{{jour.split('-')[1]}}</span>
     <div class="evenements w-100">
         <ng-container *ngFor="let e of event">
-            <span class="ev btn btn-light" *ngIf="estDansIntervale(e.date_debut,e.date_fin,dates)" [ngClass]=''>
+            <span class="ev btn btn-light" *ngIf="estDansIntervale(e.date_debut,e.date_fin,dates)" [ngClass]='getEventColor(e)'>
                     {{e.description}}
             </span>
         </ng-container>
