--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/agenda/agenda.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/agenda/agenda.component.css
@@ -8,8 +8,6 @@
 }
 .titre{
     display:inline-block;
-    padding-left:0.5rem;
-    padding-right: 0.5rem;
     width:5rem;
 }
 .cal-ligne{
@@ -27,7 +25,7 @@
 table td{
     padding:0;
     width:14.28%;
-    height:7.5rem;
+    height:9rem;
 }   
 
 @media(max-width:600px){
@@ -35,9 +33,14 @@ table td{
         padding-right:0;
     }
     .auj{
+        margin: 0 0 0 0;
         display:inline-block;
-        margin-top:0.2rem;
-        font-size: 0.5rem;
+        font-size: 0.3rem;
+
+    }
+    .cal-entete{
+        padding:0 0 0 0;
+        margin: 0.2rem 0 0.2rem 0;
     }
     .cal-titre{
         padding-left:5rem;
@@ -46,12 +49,15 @@ table td{
     }
     .titre{
         display:inline-block;
-        padding-left:0.5rem;
-        padding-right: 0.5rem;
         width:3.5rem;
     }
     table td{
         padding:0;
         width:14.28%;
+    }
+
+    .prev,.next{
+        padding: 0 0.2rem 0.1rem 0.2rem;
+        font-size:0.8rem;
     }
 }
