--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.css
@@ -28,6 +28,7 @@
     padding:0.2rem 0 0 0;
     font-size:1.0rem;
     width:100%;
+    color:white;
     
 }
 .panne{
@@ -51,12 +52,14 @@
 .revision:hover{
     background-color: #80b7ff;
 }
-
 .autre{
     background-color: #b3b3b3;
 }
 .autre:hover{
     background-color: #d6d6d6;
+}
+.ncm{
+    color: #8a8a8a;
 }
  @media(max-width:600px){
      .ev{
@@ -66,17 +69,17 @@
      }
 
      .cellule-tete{
-        height:6rem;
         text-align: center;
         font-size:0.5rem;
+        height:6rem;
     }
     .cellule .tete, .cellule .jourC, .cellule-tete .tete, .cellule-tete .jourC{
         padding:0 0 0 0;
         margin:0 0 0 0;
-        font-size: 0.4rem;
+        height:0.5rem;
+        font-size: 0.35rem;
     }
     .cellule{
-        height:5rem;
         text-align: center;
         font-size:0.5rem;
     }
