--- a/pfr-registation-frontend/pfr-registation-angular/src/styles.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/styles.css
@@ -9,3 +9,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
 
 
 /* Fin des classes pour les cartes. */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
