--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-contact/utilisateur-contact.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-contact/utilisateur-contact.component.html
@@ -28,7 +28,7 @@
         <textarea matInput formControlName="message" required></textarea>
     </mat-form-field><br>
 
-    <button mat-raised-button [disabled]="!contactForm.valid" type="submit" class="bouton-envoyer">envoyer</button>
+    <button mat-raised-button [disabled]="!contactForm.valid" type="submit" class="bouton-envoyer">Envoyer</button>
     </form>
 
 </mat-card>
