--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -30,7 +30,7 @@
       <a mat-list-item [routerLink]="'/materiel'" (click)="sidenav.close()"><mat-icon class="icone-side" >local_gas_station</mat-icon>Matériel</a>
       <a mat-list-item [routerLink]="'/moniteur'" (click)="sidenav.close()"><mat-icon class="icone-side" >video_label</mat-icon>Moniteur</a>
       <a mat-list-item [routerLink]="'/garage'" (click)="sidenav.close()"><mat-icon class="icone-side" >directions_car</mat-icon>Garage</a>
-
+      <a mat-list-item [routerLink]="'/utilisateur/contact'" (click)="sidenav.close()"><mat-icon class="icone-side" >contact_support</mat-icon>Contactez-nous</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
