Debuging merge devAliceAngular into Angular

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/document/ajouter-document/ajouter-document.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/document/ajouter-document/ajouter-document.component.html
@@ -1,6 +1,6 @@
 <p>ajouter-document works!</p>
 
-<form [formGroup]="documentForm">
+<form [formGroup]="">
   <div>
   Nom du document :
     <input type="text" formControlName="nomDocument">
