Affichage dynamique 3 évènements ou 2 évènements/Boutton +

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.css
@@ -61,6 +61,12 @@
 .ncm{
     color: #8a8a8a;
 }
+.plus{
+    padding-top:0.3rem;
+    font-size:0.8rem;
+    color:black;
+}
+
  @media(max-width:600px){
      .ev{
         height:1.1rem;
