--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/ajouter-materiel/ajouter-materiel.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/ajouter-materiel/ajouter-materiel.component.html
@@ -1,7 +1,11 @@
-<mat-card class="ajout-utilisateur-form">
 
+<mat-card id="card-head">
 
-    <div id="form-materiel">
+</mat-card>
+
+<mat-card class="ajout-materiel-container">
+    <h1 id="title">Nouveau matériel</h1>
+   <div id="form-materiel">
 
         <form [formGroup]="materielForm" (ngSubmit)="addMateriel()">
 
@@ -9,31 +13,31 @@
 
             <mat-form-field appearance="legacy">
                 <mat-label>Référence</mat-label>
-                <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">reorder</mat-icon>
                 <input matInput type="text" formControlName="ref">
             </mat-form-field>
 
             <mat-form-field appearance="legacy">
                 <mat-label>Marque</mat-label>
-                <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">branding_watermark</mat-icon>
                 <input matInput type="text" formControlName="marque">
             </mat-form-field>
 
             <mat-form-field appearance="legacy">
                 <mat-label>Modèle</mat-label>
-                <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">local_offer</mat-icon>
                 <input matInput type="text" formControlName="modele">
             </mat-form-field>
 
             <mat-form-field appearance="legacy">
                 <mat-label>Prix</mat-label>
-                <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">euro_symbol</mat-icon>
                 <input matInput type="number" formControlName="prix">
             </mat-form-field>
 
             <mat-form-field appearance="legacy">
                 <mat-label>Etat du matériel</mat-label>
-                <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">settings</mat-icon>
                 <mat-select formControlName="etat">
                     <mat-option [value]=1>En cours de fonctionnement</mat-option>
                     <mat-option [value]=2>Problème mineur détecté</mat-option>
@@ -43,7 +47,7 @@
 
             <mat-form-field appearance="legacy">
                 <mat-label>Type de Matériel</mat-label>
-                <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">local_gas_station</mat-icon>
                 <mat-select formControlName="typeMateriel">
                     <mat-option *ngFor="let item of typeMatList" [value]="item">
                         {{item}}
@@ -56,13 +60,13 @@
 
             <mat-form-field appearance="legacy">
                 <mat-label>Localisation</mat-label>
-                <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">place</mat-icon>
                 <input matInput type="text" formControlName="localisation">
             </mat-form-field>
 
             <mat-form-field appearance="legacy">
                 <mat-label>Date d'achat</mat-label>
-                <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+                <mat-icon matPrefix class="icone-info-card">date_range</mat-icon>
                 <input matInput type="date" formControlName="dateAchat">
             </mat-form-field>
 
