--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.html
@@ -3,36 +3,34 @@
     <span class="jourC w-100" [ngClass]="headColor">{{jour.split('-')[1]}}</span>
     <div class="evenements w-100">
         {{resetSpan()}}
-        <ng-container *ngFor="let e of event; let i = index">
-            {{incSpan()}}
-            <ng-container *ngIf="estDansIntervale(e.date_debut,e.date_fin,dates)">
+        <ng-container *ngFor="let e of eventInInterval; let i = index">
+                {{incSpan()}}
                 <ng-container *ngIf="!testSpan(); else plusSpan">
                     <span class="ev btn btn-light"  [ngClass]='getEventColor(e)'>
                         {{e.description}}
                     </span>
                 </ng-container> 
                 <ng-template #plusSpan>
-                    <ng-container *ngIf="(getNbSpan()<=3)&&!testFini(i+1) else nonFini">
-                            <span class="ev btn btn-light"  [ngClass]='getEventColor(e)'>
-                                {{e.description}}
-                            </span>
+                    <ng-container *ngIf="(getNbSpan()<3)&&!testFini(i+1) else nonFini">
+                        <span class="ev btn btn-light"  [ngClass]='getEventColor(e)'>
+                            {{e.description}}
+                        </span>
                     </ng-container>
                     <ng-template #nonFini>
-                        <ng-container *ngIf="getNbSpan()<=4&&testFini(i+1) else sup3">
+                        <ng-container *ngIf="getNbSpan()<=3&&testFini(i+1) else sup3">
                             <span class="ev btn btn-light"  [ngClass]='getEventColor(e)'>
                                 {{e.description}}
                             </span>
                         </ng-container>
                         <ng-template #sup3>
                             <ng-container *ngIf="testFini(i+1)">
-                                <span class="ev btn btn-light plus">
-                                    {{getNbSpan()-3}} autres
+                                <span class="ev btn btn-light plus" (click)="plusModal()">
+                                    {{getNbSpan()-2}} autres
                                 </span>
                             </ng-container>
                         </ng-template>
                     </ng-template>
                 </ng-template>
             </ng-container>
-        </ng-container>
     </div>
 </div>      
