--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/plus-modal/plus-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/plus-modal/plus-modal.component.html
@@ -1,1 +1,7 @@
-test2
+<div mat-dialog-content>
+    <ng-container *ngFor="let e of data.eventData; let i = index">
+        <span class="ev btn btn-light"  [ngClass]='getEventColor(e)'>
+            {{e.description}}
+        </span>
+    </ng-container>
+</div>
