Ajout du footer avec routes actives et amélioration  de certains points visuels d'ajouter matériel et liste matériel

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.css
@@ -138,6 +138,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   margin-left: 10%;
+  margin-right: 10%;
   background-image: url("/assets/images/station3.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -159,6 +160,9 @@ h1 {
 .card-container{
   height: 300px;
   width: 90%;
+}
+h2{
+  color:rgb(50, 74, 94);
 }
 }
 
