--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
@@ -1,5 +1,5 @@
 <mat-card class="card-top">
-    <h2 style="margin: 0;">Listing équipements</h2>
+    <h2 >Liste d'équipements</h2>
     <button mat-mini-fab color="warn" id="bouton-ajouter" [routerLink]="'/materiel/ajouter'">
         <mat-icon>add</mat-icon>
     </button>
