--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/ajouter-materiel/ajouter-materiel.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/ajouter-materiel/ajouter-materiel.component.css
@@ -47,7 +47,7 @@
         margin-top: 2%;
         margin-left: 20%;
         margin-right: 20%;
-        height: 15%;
+        height: 80px;
         width: auto;
         background-image: url("/assets/images/ajoutMateriel3.jpg");
         background-repeat: no-repeat;
