--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/footer/footer.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/footer/footer.component.html
@@ -1,6 +1,23 @@
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-6 col-md-4" >
+      <mat-list >
+        <a mat-list-item [routerLink]="'/utilisateur/accueil'" class="footer-liste"> Utilisateurs </a>
+        <a mat-list-item [routerLink]="'/matreriel/liste'" class="footer-liste"> Materiel </a>
+       </mat-list>
+    </div>
+    <div class="col-xs-6 col-md-4">
+      <mat-list >
+        <a mat-list-item [routerLink]="'/utilisateur/accueil'" class="footer-liste"> Agenda </a>
+        <a mat-list-item [routerLink]="'/utilisateur/accueil'" class="footer-liste">Documents </a>
 
-<mat-grid-list cols="3" rowHeight="10em">
-        <mat-grid-tile>1</mat-grid-tile>
-        <mat-grid-tile>2</mat-grid-tile>
-        <mat-grid-tile>3</mat-grid-tile>
-      </mat-grid-list>
+       </mat-list>
+    </div>
+    <div class="col-xs-6 col-md-4">
+      <mat-list >
+        <a mat-list-item [routerLink]="'/utilisateur/accueil'" class="footer-liste"> Notre équipe</a>
+        <mat-list-item class="footer-liste"> © Régistation-2020 </mat-list-item>
+       </mat-list>
+    </div>
+  </div>
+</div>
