--- a/pfr-registation-frontend/pfr-registation-angular/src/app/component/content/content.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/component/content/content.component.html
@@ -35,4 +35,5 @@
 </div>
 
 <!-- Affichage de la team -->
-<app-presentation-team></app-presentation-team>
+<!-- <app-presentation-team></app-presentation-team> -->
+
