--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-contact/utilisateur-contact.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-contact/utilisateur-contact.component.html
@@ -1,8 +1,8 @@
 <mat-card class="card-contact">
-
-    Contactez-nous ! 
-
-    <form [formGroup]="contactForm" (ngSubmit)="envoyer()">
+    <mat-card-header>
+        <h2>Contactez-nous !</h2>
+    </mat-card-header>
+    <form [formGroup]="contactForm" (ngSubmit)="envoyer()" class="monFormContact">
 
         <mat-form-field appearance="legacy">
             <mat-icon matPrefix class="icone-info-card">face</mat-icon>
@@ -16,19 +16,19 @@
             <input matInput type="text" formControlName="prenom" required>
         </mat-form-field>
 
-    <mat-form-field appearance="legacy">
-        <mat-icon matPrefix class="icone-info-card">alternate_email</mat-icon>
-        <mat-label>email</mat-label>
-        <input matInput type="text" formControlName="email" required>
-    </mat-form-field>
-    
-    <mat-form-field appearance="legacy">
-        <mat-icon matPrefix class="icone-info-card">speaker_notes</mat-icon>
-        <mat-label>Message</mat-label>
-        <textarea matInput formControlName="message" required></textarea>
-    </mat-form-field><br>
+        <mat-form-field appearance="legacy">
+            <mat-icon matPrefix class="icone-info-card">alternate_email</mat-icon>
+            <mat-label>email</mat-label>
+            <input matInput type="text" formControlName="email" required>
+        </mat-form-field>
 
-    <button mat-raised-button [disabled]="!contactForm.valid" type="submit" class="bouton-envoyer">Envoyer</button>
+        <mat-form-field appearance="legacy">
+            <mat-icon matPrefix class="icone-info-card">speaker_notes</mat-icon>
+            <mat-label>Message</mat-label>
+            <textarea matInput class="monTextarea" formControlName="message" required></textarea>
+        </mat-form-field><br>
+
+        <button mat-raised-button [disabled]="!contactForm.valid" type="submit" class="bouton-envoyer">Envoyer</button>
     </form>
 
 </mat-card>
