--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-list/utilisateur-list.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-list/utilisateur-list.component.css
@@ -6,7 +6,9 @@
 .card-top{
     display: flex;
     justify-content: space-between;
+    margin-top: 1rem;
     margin-left: 30px;
+    margin-right: 1rem;
 }
 .icone-info-card{
     margin-right: 5px;
@@ -18,4 +20,7 @@
 }
 .mat-elevation-z4 {
     width: 250px;
+}
+.container-div{
+width: 95%;
 }
