--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-form/utilisateur-form.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/utilisateur/utilisateur-form/utilisateur-form.component.css
@@ -6,7 +6,8 @@
 }
 .ajout-utilisateur-form{
     margin-left: 2.3rem;
-    margin-right: auto;
+    margin-right: 2.3rem;
+    margin-top: 2rem;
 }
 .bouton-ajouter{
     color:#fff;
