--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.css
@@ -1,11 +1,15 @@
 .cellule{
     text-align: center;
     font-size:0.7rem;
+    height:9rem;
+    z-index:1;
 }
 .cellule-tete{
 	height:10rem;
     text-align: center;
     font-size:0.7rem;
+    height:9rem;
+    z-index:1;
 }
 .cellule .tete, .cellule .jourC, .cellule-tete .tete, .cellule-tete .jourC{
     padding:0 0 0 0;
@@ -29,7 +33,7 @@
     font-size:1.0rem;
     width:100%;
     color:white;
-    
+    z-index:7;
 }
 .panne{
     background-color: #ff952b;
