--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/footer/footer.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/footer/footer.component.html
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col-xs-6 col-md-4" >
       <mat-list >
-        <a mat-list-item [routerLink]="'/utilisateur/accueil'" class="footer-liste"> Utilisateurs </a>
-        <a mat-list-item [routerLink]="'/matreriel/liste'" class="footer-liste"> Materiel </a>
+        <a mat-list-item [routerLink]="'/utilisateur/liste'" class="footer-liste"> Utilisateurs </a>
+        <a mat-list-item [routerLink]="'/materiel/liste'" class="footer-liste"> Materiel </a>
        </mat-list>
     </div>
     <div class="col-xs-6 col-md-4">
       <mat-list >
-        <a mat-list-item [routerLink]="'/utilisateur/accueil'" class="footer-liste"> Agenda </a>
+        <a mat-list-item [routerLink]="'/evenement'" class="footer-liste"> Agenda </a>
         <a mat-list-item [routerLink]="'/utilisateur/accueil'" class="footer-liste">Documents </a>
 
        </mat-list>
