--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
@@ -17,7 +17,7 @@
             <mat-card-actions>
                 <form #getType=ngForm>
                     <input type="hidden" value=1>
-                    <button (click)='getAllByType("POMPE")' mat-raised-button color="primary"
+                    <button (click)='getAllByType("POMPE")' class="bouton-afficher" mat-raised-button 
                         type="submit">Afficher</button>
                 </form>
             </mat-card-actions>
@@ -35,7 +35,7 @@
             <mat-card-actions>
                 <form #getType=ngForm>
                     <input type="hidden" value=2>
-                    <button (click)='getAllByType("CUVE")' mat-raised-button color="primary"
+                    <button (click)='getAllByType("CUVE")'   class="bouton-afficher" mat-raised-button 
                         type="submit">Afficher</button>
                 </form>
             </mat-card-actions>
@@ -54,7 +54,7 @@
             <mat-card-actions>
                 <form #getType=ngForm>
                     <input type="hidden" value=3>
-                    <button (click)='getAllByType("BOUTIQUE")' mat-raised-button color="primary"
+                    <button (click)='getAllByType("BOUTIQUE")' mat-raised-button class="bouton-afficher"
                         type="submit">Afficher</button>
                 </form>
             </mat-card-actions>
@@ -89,6 +89,14 @@
                 <td data-th="Date d'achat">{{mat.dateAchat}}</td>
                 <td data-th="Type de matériel">{{mat.typeMateriel}}</td>
                 <td data-th="Localisation">{{mat.localisation}}</td>
+                <td>
+                    <button mat-mini-fab class="bouton-modifier"  [routerLink]="'/materiel/ajouter'">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-mini-fab color="warn" id="bouton-ajouter" [routerLink]="'/materiel/ajouter'">
+                        <mat-icon>delete_sweep</mat-icon>
+                    </button>
+                </td>
             </tr>
         </tbody>
     </table>
