--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
@@ -1,5 +1,5 @@
 <mat-card class="card-top">
-    <h2 >Liste d'équipements</h2>
+    <h2>Liste d'équipements</h2>
     <button mat-mini-fab color="warn" id="bouton-ajouter" [routerLink]="'/materiel/ajouter'">
         <mat-icon>add</mat-icon>
     </button>
@@ -8,7 +8,7 @@
 <div class="content" fxLayout="row wrap" fxLayoutGap="10% grid">
     <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%">
         <mat-card class="mat-elevation-z4">
-            <img mat-card-image src="/assets/images/pompe.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="/assets/images/pompe.jpg">
             <mat-card-content>
                 <h1>
                     POMPES
@@ -17,7 +17,7 @@
             <mat-card-actions>
                 <form #getType=ngForm>
                     <input type="hidden" value=1>
-                    <button (click)='getAllByType("POMPE")' class="bouton-afficher" mat-raised-button 
+                    <button (click)='getAllByType("POMPE")' class="bouton-afficher" mat-raised-button
                         type="submit">Afficher</button>
                 </form>
             </mat-card-actions>
@@ -26,7 +26,7 @@
 
     <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%">
         <mat-card class="mat-elevation-z4">
-            <img mat-card-image src="/assets/images/cuve.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="/assets/images/cuve.jpg">
             <mat-card-content>
                 <h1>
                     CUVES
@@ -35,7 +35,7 @@
             <mat-card-actions>
                 <form #getType=ngForm>
                     <input type="hidden" value=2>
-                    <button (click)='getAllByType("CUVE")'   class="bouton-afficher" mat-raised-button 
+                    <button (click)='getAllByType("CUVE")' class="bouton-afficher" mat-raised-button
                         type="submit">Afficher</button>
                 </form>
             </mat-card-actions>
@@ -45,7 +45,7 @@
 
     <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%">
         <mat-card class="mat-elevation-z4">
-            <img mat-card-image src="/assets/images/boutique.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="/assets/images/boutique.jpg">
             <mat-card-content>
                 <h1 class="titreType">
                     BOUTIQUE
@@ -90,12 +90,17 @@
                 <td data-th="Type de matériel">{{mat.typeMateriel}}</td>
                 <td data-th="Localisation">{{mat.localisation}}</td>
                 <td>
-                    <button mat-mini-fab class="bouton-modifier"  [routerLink]="'/materiel/ajouter'">
-                        <mat-icon>edit</mat-icon>
-                    </button>
-                    <button mat-mini-fab color="warn" id="bouton-ajouter" [routerLink]="'/materiel/ajouter'">
-                        <mat-icon>delete_sweep</mat-icon>
-                    </button>
+                    
+                        <button mat-mini-fab class="bouton-modifier" [routerLink]="'/materiel/ajouter'">
+                            <mat-icon>edit</mat-icon>
+                        </button>
+                        
+                        <form #getIdToDelete=ngForm>
+                            Id: <input type="hidden" name=idToDelete [(ngModel)]=mat.idMat required #idToDelete="ngModel">
+                        <button mat-mini-fab color="warn" id="bouton-supprimer" (click)="deleteModal(idToDelete)">
+                            <mat-icon>delete_sweep</mat-icon>
+                        </button>
+                    </form>
                 </td>
             </tr>
         </tbody>
