--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/ajout-modal/ajout-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/ajout-modal/ajout-modal.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title class="text-center">Ajouter un évènement</h1>
 <div mat-dialog-content>
-    <form class="form-group" #eventForm="ngForm" (ngSubmit)="ajouterEvenement()">
+    <form class="form-group"  #eventForm="ngForm" (ngSubmit)="ajouterEvenement(data.ac)">
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
@@ -16,10 +16,11 @@
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="desc" >Description</span>
+                <span class="input-group-text" id="desc">Description</span>
             </div>
             <input type="text" class="form-control"
                 aria-label="description" aria-describedby="desc" 
+                placeholder="Description de l'évènement"
                 name="description" [(ngModel)]="event.description" #description="ngModel" required>
         </div>
 
@@ -27,8 +28,9 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="dateD">Date début</span>
             </div>
-            <input class="form-control" aria-describedby="dateD"
-            name="dd" [(ngModel)]="model" ngbDatepicker #dd="ngbDatepicker" [(ngModel)]="event.date_debut" required #date_debut>
+            <input class="form-control datepicker" aria-describedby="dateD"name="dd" [(ngModel)]="model" ngbDatepicker #dd="ngbDatepicker" 
+                 placeholder="Choissisez une date" container="body"
+                 [startDate]="{year:data.date.getFullYear(),month:(data.date.getMonth()+1), day:data.date.getDate()}" [(ngModel)]="event.date_debut" required #date_debut>
             <div class="input-group-append">
             <button class="btn btn-outline-secondary calendar" (click)="dd.toggle()" type="button">
                 <mat-icon class="mat-icon notranslate material-icons cal-icon" aria-hidden="true" data-mat-icon-type="fond">calendar_today</mat-icon>
@@ -40,16 +42,15 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="dateF">Date fin</span>
             </div>
-            <input class="form-control" aria-describedby="dateF"
-            name="df" [(ngModel)]="model2" ngbDatepicker #df2="ngbDatepicker" [(ngModel)]="event.date_fin" required #date_fin>
+            <input class="form-control datepicker" aria-describedby="dateF" name="df" [(ngModel)]="model2" ngbDatepicker #df2="ngbDatepicker" 
+                placeholder="Choissisez une date" container="body"
+                [startDate]="{year:data.date.getFullYear(),month:(data.date.getMonth()+1), day:data.date.getDate()}" [(ngModel)]="event.date_fin" required #date_fin>
             <div class="input-group-append">
-            <button class="btn btn-outline-secondary calendar" (click)="df2.toggle()" type="button">
-                <mat-icon class="mat-icon notranslate material-icons cal-icon" aria-hidden="true" data-mat-icon-type="fond">calendar_today</mat-icon>
-            </button>
+                <button class="btn btn-outline-secondary calendar" (click)="df2.toggle()" type="button">
+                    <mat-icon class="mat-icon notranslate material-icons cal-icon" aria-hidden="true" data-mat-icon-type="fond">calendar_today</mat-icon>
+                </button>
             </div>
-        </div>
-
-        <p>{{eventForm.status}}</p>
+        </div> 
         <button class="btn btn-success" type="submit" [disabled]="!eventForm.valid">Créer</button>
-    </form>
+    </form> 
 </div>
